test/errors/err-selfredef.tpg
generator		-- Import Statements
declarations	-- General Declarations
operators		-- Operators (our Node Kinds)
	CONST
rules			-- Production Rules
	test = CONST : 1.

    test1 = test : 2.
    test2 = test : 3.
    test3 = test1 : 0.
    test4 = test2 : 0.
    test5 = test : 0
		| test4 : 1
		| test3 : 0
		| test5 : 0		-- Error Case
		| test2 : 1.
end




